--- a/consultar.html
+++ b/consultar.html
@@ -15,7 +15,7 @@
     <link href="css/bootstrap-theme.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="theme.css" rel="stylesheet">
+    <link href="css/theme.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -63,31 +63,31 @@
           <form class="form-horizontal" role="form">
             <div class="form-group">
               <label class="col-sm-2 control-label">No. Cliente</label>
-              <div class="col-sm-10">
+              <div class="col-sm-8">
                 <input type="text" class="form-control" id="noCliente" placeholder="No. Cliente">
               </div>
             </div>
             <div class="form-group">
               <label class="col-sm-2 control-label">Nombre</label>
-              <div class="col-sm-10">
+              <div class="col-sm-8">
                 <input type="text" class="form-control" id="nombre" placeholder="Nombre">
               </div>
             </div>
             <div class="form-group">
               <label class="col-sm-2 control-label">A. Paterno</label>
-              <div class="col-sm-10">
+              <div class="col-sm-8">
                 <input type="text" class="form-control" id="aPaterno" placeholder="Apellido Paterno">
               </div>
             </div>
             <div class="form-group">
               <label class="col-sm-2 control-label">A. Materno</label>
-              <div class="col-sm-10">
+              <div class="col-sm-8">
                 <input type="text" class="form-control" id="aMaterno" placeholder="Apellido Materno">
               </div>
             </div>
             <div class="form-group">
               <div class="col-sm-offset-2 col-sm-10">
-                <button type="button" class="btn btn-default" id="buscar">Buscar</button>
+                <button type="button" class="btn btn-default" id="buscar" >Buscar</button>
               </div>
              </div>
           </form>
@@ -95,7 +95,18 @@
       </div><!-- Fin del Formulario -->
 
       <div class="panel panel-default" id="panelBuscar"> <!-- Paner Mostrar cliente -->
-        <div class="panel-heading"><h4>Mostrar Cliente</h4></div>
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col-xs-9 col-sm-10 col-md-11">
+              <h4>Mostrar Cliente</h4>
+            </div>
+            <div class="col-xs-3 col-sm-2 col-md-1">
+              <button type="button" class="btn btn-default btn-lg" id="remove">
+                <span class="glyphicon glyphicon-remove"></span>
+              </button>
+            </div>
+          </div>
+        </div>
         <div class="panel-body">
           <p>
             <div class="row"> <!-- Formulario -->
@@ -122,6 +133,7 @@
                 <th>Tipo de cuenta</th>
                 <th>Saldo</th>
                 <th>Protección</th>
+                <th></th>
               </tr>
             </thead>
             <tbody>
@@ -130,24 +142,28 @@
                 <td>Cheques</td>
                 <td>5000.00</td>
                 <td>Si</td>
+                <td><button type="button" class="btn btn-default btn-xs" id="ope" >Ope</button></td>
               </tr>
               <tr>
                 <td>2</td>
                 <td>Ahorros</td>
                 <td>200.00</td>
                 <td>N/A</td>
+                <td><button type="button" class="btn btn-default btn-xs" id="ope" >Ope</button></td>
               </tr>
               <tr>
                 <td>3</td>
                 <td>Ahorros</td>
                 <td>0.00</td>
                 <td>N/A</td>
+                <td><button type="button" class="btn btn-default btn-xs" id="ope" >Ope</button></td>
               </tr>
               <tr>
                 <td>4</td>
                 <td>Cheques</td>
                 <td>1000.00</td>
                 <td>No</td>
+                <td><button type="button" class="btn btn-default btn-xs" id="ope" >Ope</button></td>
               </tr>
             </tbody>
           </table>
@@ -163,6 +179,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script type='text/javascript' src='ocultar.js'></script>
+    <script type='text/javascript' src='js/script_page.js'></script>
   </body>
 </html>
