--- a/consultar.html
+++ b/consultar.html
@@ -8,14 +8,14 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
-    <title>Banca UNITEC - Consultar Cliente</title>
+    <title>Banca UNITEC - Consulta Cliente</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/bootstrap-theme.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/theme.css" rel="stylesheet">
+    <link href="css/jumbotron.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -52,12 +52,18 @@
       </div>
     </nav>
 
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Consulta Cliente</h1>
+      </div>
+    </div>
+<!--
     <div class="container theme-showcase">
 
       <div class="jumbotron">
         <h1>Consulta Cliente</h1>
-      </div>
-
+      </div> -->
+    <div class="container">
       <div class="row"> <!-- Formulario -->
         <div class="col-xs-12 col-sm-8 col-md-8">
           <form class="form-horizontal" role="form">
@@ -94,14 +100,14 @@
         </div>
       </div><!-- Fin del Formulario -->
 
-      <div class="panel panel-default" id="panelBuscar"> <!-- Paner Mostrar cliente -->
-        <div class="panel-heading">
+      <div class="panel panel-primary" id="panelBuscar"> <!-- Paner Mostrar cliente -->
+        <div class="panel-heading"> <!-- Cliente y cuentas -->
           <div class="row">
             <div class="col-xs-9 col-sm-10 col-md-11">
               <h4>Mostrar Cliente</h4>
             </div>
             <div class="col-xs-3 col-sm-2 col-md-1">
-              <button type="button" class="btn btn-default btn-lg" id="remove">
+              <button type="button" class="btn btn-danger btn-lg" id="removeMostrar">
                 <span class="glyphicon glyphicon-remove"></span>
               </button>
             </div>
@@ -142,34 +148,68 @@
                 <td>Cheques</td>
                 <td>5000.00</td>
                 <td>Si</td>
-                <td><button type="button" class="btn btn-default btn-xs" id="ope" >Ope</button></td>
+                <td><button type="button" class="btn btn-default btn-xs ope" >Ope</button></td>
               </tr>
               <tr>
                 <td>2</td>
                 <td>Ahorros</td>
                 <td>200.00</td>
                 <td>N/A</td>
-                <td><button type="button" class="btn btn-default btn-xs" id="ope" >Ope</button></td>
+                <td><button type="button" class="btn btn-default btn-xs ope" >Ope</button></td>
               </tr>
               <tr>
                 <td>3</td>
                 <td>Ahorros</td>
                 <td>0.00</td>
                 <td>N/A</td>
-                <td><button type="button" class="btn btn-default btn-xs" id="ope" >Ope</button></td>
+                <td><button type="button" class="btn btn-default btn-xs ope" >Ope</button></td>
               </tr>
               <tr>
                 <td>4</td>
                 <td>Cheques</td>
                 <td>1000.00</td>
                 <td>No</td>
-                <td><button type="button" class="btn btn-default btn-xs" id="ope" >Ope</button></td>
+                <td><button type="button" class="btn btn-default btn-xs ope" >Ope</button></td>
               </tr>
-            </tbody>
-          </table>
-        </div> <!-- Fin Tabla -->
-
+            </tbody> 
+          </table> <!-- Fin Tabla --> 
+        </div> <!-- Fin Cliente y cuentas -->
       </div> <!-- Fin Paner Mostrar cliente -->
+
+      <div class="panel panel-primary" id="panelOperaciones"> <!-- Paner Opetraciones -->
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col-xs-9 col-sm-10 col-md-11">
+              <h4>Operaciones</h4>
+            </div>
+            <div class="col-xs-3 col-sm-2 col-md-1">
+              <button type="button" class="btn btn-danger btn-lg" id="removeOperaciones">
+                <span class="glyphicon glyphicon-remove"></span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="panel-body">
+          <div class="row">
+            <div class="col-sm-4">
+              <p><b>Nombre:</b></p>
+              <p><button type="button" class="btn btn-danger btn-lg">Retirar 100</button></p>
+              <p><button type="button" class="btn btn-danger btn-lg">Retirar 300</button></p>
+              <p><button type="button" class="btn btn-danger btn-lg">Retirar 500</button></p>
+            </div>
+            <div class="col-sm-4">
+              <p><b>No. Cuenta:</b></p>
+              <p><textarea class="form-control" rows="7"></textarea></p>
+            </div>
+            <div class="col-sm-4">
+              <p><b>Tipo:</b></p>
+              <p><button type="button" class="btn btn-success btn-lg">Depositar  100</button></p>
+              <p><button type="button" class="btn btn-success btn-lg">Depositar  300</button></p>
+              <p><button type="button" class="btn btn-success btn-lg">Depositar  500</button></p>
+            </div>
+          </div>
+        </div>
+      </div>
 
     </div><!-- /.container -->
 
