--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="css/bootstrap-theme.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="theme.css" rel="stylesheet">
+    <link href="css/jumbotron.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -52,11 +52,16 @@
       </div>
     </nav>
 
-    <div class="container theme-showcase">
-
-      <div class="jumbotron">
-        <h1>Banca UNITEC<small> Proyecto EPOO</small></h1>
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Proyecto EPOO<small> Banca UNITEC</small></h1>
+        <p>
+          Bienvenido a la banca electrónica más popular en todo el mercado.
+        </p>
       </div>
+    </div>
+
+    <div class="container">
 
     </div><!-- /.container -->
 
