Se agrego footer

--- a/consultar.html
+++ b/consultar.html
@@ -211,6 +211,13 @@
         </div>
       </div>
 
+         
+      <!-- FOOTER -->
+      <hr>
+      <footer>
+        <p>&copy; 2013 Maigos Tech.</p>
+      </footer> 
+
     </div><!-- /.container -->
 
 
