--- a/crear.html
+++ b/crear.html
@@ -198,6 +198,13 @@
         </form>
       </div>
 
+         
+      <!-- FOOTER -->
+      <hr>
+      <footer>
+        <p>&copy; 2013 Maigos Tech.</p>
+      </footer> 
+
     </div><!-- /.container -->
 
 
